--- a/admin.html
+++ b/admin.html
@@ -3,30 +3,148 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>اللقطات الحية</title>
+    <title>Lokqta-Ai | نظام الرصد الذكي</title>
+    <style>
+        :root {
+            --gray-char: #4a4a4a; /* الرمادي للذكر */
+            --orange-char: #ff6b00; /* البرتقالي للأنثى */
+            --bg-dark: #0f172a;
+        }
+
+        body {
+            background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
+            color: white;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+
+        .header {
+            padding: 20px;
+            text-align: center;
+            background: rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(10px);
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .monitor-container {
+            flex: 1;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .live-status {
+            display: flex;
+            gap: 20px;
+            margin-bottom: 30px;
+        }
+
+        .char-card {
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 20px;
+            padding: 15px;
+            width: 140px;
+            text-align: center;
+            border: 2px solid transparent;
+            transition: 0.3s;
+        }
+
+        .char-card.male { border-color: var(--gray-char); }
+        .char-card.female { border-color: var(--orange-char); }
+
+        .char-card img {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            margin-bottom: 10px;
+            filter: drop-shadow(0 0 10px rgba(0,0,0,0.5));
+        }
+
+        .scanning-box {
+            width: 90%;
+            max-width: 400px;
+            height: 200px;
+            border: 1px solid rgba(0, 255, 255, 0.3);
+            border-radius: 15px;
+            position: relative;
+            background: rgba(0, 0, 0, 0.3);
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .scanning-line {
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            background: cyan;
+            top: 0;
+            box-shadow: 0 0 15px cyan;
+            animation: scan 2s linear infinite;
+        }
+
+        @keyframes scan {
+            0% { top: 0; }
+            100% { top: 100%; }
+        }
+
+        .nav-bar {
+            display: flex;
+            justify-content: space-around;
+            padding: 15px;
+            background: rgba(15, 23, 42, 0.9);
+            position: sticky;
+            bottom: 0;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .nav-item {
+            color: #94a3b8;
+            text-decoration: none;
+            font-size: 14px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .nav-item.active { color: var(--orange-char); }
+    </style>
 </head>
 <body>
-    <header class="app-header">
-        <img src="male.png" class="char-img">
-        <span>رصد حي الآن...</span>
-        <img src="female.png" class="char-img">
-    </header>
 
-    <div class="feed-container" id="feed">
-        <div class="product-post">
-            <div class="product-card">
-                <h3>جاري رصد لقطات (الإلكترونيات)...</h3>
-                <button class="buy-btn">انتظر قليلاً</button>
+    <div class="header">
+        <h2>LOKQTA <span style="color: cyan;">AI</span></h2>
+        <small>نظام الرصد والتحليل الذكي</small>
+    </div>
+
+    <div class="monitor-container">
+        <div class="live-status">
+            <div class="char-card male">
+                <img src="male.png" alt="الذكر">
+                <div style="color: var(--gray-char);">الرمادي (ذكر)</div>
             </div>
+            <div class="char-card female">
+                <img src="female.png" alt="الأنثى">
+                <div style="color: var(--orange-char);">البرتقالي (أنثى)</div>
+            </div>
+        </div>
+
+        <div class="scanning-box">
+            <div class="scanning-line"></div>
+            <p id="status-text">جاري فحص النطاق...</p>
         </div>
     </div>
 
     <nav class="nav-bar">
-        <a href="feed.html" class="nav-link active">اللقطات</a>
-        <a href="explore.html" class="nav-link">الأقسام</a>
-        <a href="admin.html" class="nav-link">الإدارة</a>
+        <a href="feed.html" class="nav-item">اللقطات</a>
+        <a href="explore.html" class="nav-item">الأقسام</a>
+        <a href="admin.html" class="nav-item active">الإدارة</a>
     </nav>
-    <script src="app.js"></script>
+
 </body>
 </html>
